tests/errors/int_lit_range_err/int_lit_range_err.c
#error int_lit_range_err.int_lit_range_err:7:5 This type of literal can't represent the value.
#error int_lit_range_err.int_lit_range_err:8:5 This type of literal can't represent the value.
#error int_lit_range_err.int_lit_range_err:12:11 This type of literal can't represent the value.
#error int_lit_range_err.int_lit_range_err:13:12 This type of literal can't represent the value.
#error int_lit_range_err.int_lit_range_err:16:11 This type of literal can't represent the value.
